<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="ch.epfl.sweng.project.Fragments.ChallengeDialogFragment"
             android:id="@+id/define_challenge">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        >

        <TextView
            android:text="@string/prepare_your_challenge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/challenge_dlg_title"
            android:textStyle="normal|bold"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"/>

        <TextView
            android:text="@string/competition_based_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textSize="20sp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_distance"
                android:layout_weight="1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"/>

            <Button
                android:text="@string/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_time"
                android:layout_weight="1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"/>
        </LinearLayout>

        <TextView
            android:text="@string/set_the"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_set_parameter"
            android:textSize="20sp"
            android:paddingTop="25dp"
            android:gravity="center"
            android:paddingBottom="10dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/first_picker"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:text="@string/h"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/txt_first_unit"
                android:layout_weight="1"
                android:gravity="center"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/second_picker"
                android:layout_weight="1"/>

            <TextView
                android:text="@string/min"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/txt_second_unit"
                android:layout_weight="1"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
