<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="ch.epfl.sweng.project.Fragments.ChallengeDialogFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:weightSum="1">

        <TextView
            android:text="@string/schedule_your_challenge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/challenge_dlg_title"
            android:textStyle="normal|bold"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"/>

        <TextView
            android:text="@string/choose_the_challenge_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textSize="18sp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:layout_marginLeft="50dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_distance"
                android:layout_weight="1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"/>

            <Button
                android:text="@string/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_time"
                android:layout_weight="1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"/>
        </LinearLayout>

        <TextView
            android:text="@string/choose_the_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:layout_weight="0.02"
            android:weightSum="1">

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/datePicker"
                android:layout_weight="0.69"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/choose_the_time"
            android:layout_marginRight="50dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="159dp"
            android:weightSum="1">


            <TimePicker
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:id="@+id/timePicker"
                android:timePickerMode="spinner"
                android:layout_marginLeft="40dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
